# stanford.legion

./: .clang-tidy  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.txt  CMakeLists.txt  VERSION  perf.py  test.py
examples/kokkos_saxpy/: CMakeLists.txt  kokkos_saxpy.cc
realm/: .clang-tidy  .cmake-format  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  README.md
realm/.github/: release-drafter.yml
realm/.github/ISSUE_TEMPLATE/: documentation-issue-template.md
realm/.github/workflows/: ci.yml  coverage.yml  format.yml  legion.yml  release-drafter.yml
realm/.reuse/templates/: reuse.jinja2
realm/benchmarks/: CMakeLists.txt
realm/benchmarks/event_latency/: .gitignore  CMakeLists.txt  event_latency.cc
realm/benchmarks/event_throughput/: .gitignore  event_throughput.cc
realm/benchmarks/event_ubench/: event_ubench.cc
realm/benchmarks/lock_chains/: .gitignore  lock_chains.cc
realm/benchmarks/lock_contention/: lock_contention.cc
realm/benchmarks/memcpy/: CMakeLists.txt  memcpy.cc
realm/benchmarks/reducetest/: .gitignore  reducetest.cc
realm/benchmarks/task_throughput/: .gitignore  CMakeLists.txt  task_throughput.h  task_throughput_gpu.cu
realm/benchmarks/task_ubench/: task_ubench.cc  task_ubench_gpu.cu
realm/cmake/: .clang-format-ignore  CodeCoverage.cmake  CodeCoverage.cmake.license  FindGASNet.cmake  RealmConfig.cmake.in  RealmPackaging.cmake  bin2c.cmake  bin2c.template.in  deppart_tmpl.cc.in  realm.pc.in  realm_defines.h.in
realm/cmake/toolchains/: aarch64-linux-gnu.cmake  powerpc64le-linux-gnu.cmake
realm/doxygen/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css  doxygen-awesome.css.license  dropdown.css  header.html  selectversion.js
realm/examples/: CMakeLists.txt
realm/examples/saxpy/: CMakeLists.txt  saxpy.h  saxpy_cpu.cc  saxpy_gpu.cu
realm/examples/stencil/: CMakeLists.txt  cpu_kernels.h  stencil.cc  stencil.h
realm/examples/vtable/: CMakeLists.txt
realm/src/: CMakeLists.txt  realm.hpp
realm/src/realm/: activemsg.cc  barrier_impl.cc  comp_queue_impl.cc  comp_queue_impl.h  compiler_support.h  dynamic_table.h  dynamic_table.inl  event.inl  event_impl.cc  event_impl.h  faults.cc  idx_impl.cc  indexspace.h  indexspace.inl  inst_impl.cc  inst_impl.h  inst_layout.cc  inst_layout.h  inst_layout.inl  instance.h  instance.inl  kokkos_interop.cc  logging.cc  machine.h  machine_impl.cc  mem_impl.cc  mem_impl.h  mem_impl.inl  memory.h  metadata.cc  module.cc  module_config.cc  module_config.h  module_config.inl  mutex.cc  network.cc  nodeset.cc  nvtx.h  operation.cc  operation.h  (+24 more)
realm/tests/: CMakeLists.txt  barrier_arrivals.cc  barrier_reduce.cc  coverings.cc  ctxswitch.cc  cuda_arrays.h  cuda_arrays_gpu.cu  cuda_scatter_test.cc  deferred_allocs.cc  deppart.cc  event_subscribe.cc  extres_alias.cc  idcheck.cc  inst_reuse.cc  large_tls.cc  machine_config_test.cc  machine_queries.cc  memmodel.cc  memspeed_gpu.cu  multiaffine.cc  multiaffine.h  osdep.h  philox.h  realm_reinit.cc  rect_transform_test.cc  refcount_byfield_test.cc  refcount_image_test.cc  refcount_preimage_test.cc  refcount_setops_test.cc  rsrv_acquire_poisoned.cc  scatter.cc  serializing.cc  simple_reduce.cc  simple_reduce_gpu.cu  sparsity_destroy.cc  subgraphs.cc  task_stream.cc  task_stream_gpu.cu  taskreg.cc  taskreg_helper.py  (+8 more)
realm/tests/c/: common.h  test_c_external_inst.cc  test_c_inst.cc  test_event.cc  test_event_poisoned.cc  test_memory_query.cc  test_processor_query.cc  test_runtime.cc
realm/tests/unit_tests/: .clang-format  address_list_test.cc  addrsplit_channel_test.cc  backtrace_test.cc  c_affinity.cc  c_event.cc  c_external_inst.cc  c_external_inst_cuda.cc  c_inst.cc  c_inst_copy.cc  c_memory_attr.cc  c_memory_query.cc  c_processor_attr.cc  c_processor_query.cc  c_processor_task.cc  c_runtime_attr.cc  c_runtime_version.cc  circ_queue_test.cc  comp_queue_test.cc  dynamic_table_test.cc  event_test.cc  fragmented_message_test.cc  gather_scatter_test.cc  hpp_event_test.cc  hpp_runtime_test.cc  hpp_span_test.cc  incoming_message_manager_test.cc  indirect_iterator_test.cc  intrusive_list_test.cc  memcpy_channel_test.cc  nodeset_test.cc  path_cache_test.cc  point_test.cc  pri_queue_test.cc  range_allocator_test.cc  rectlist_test.cc  repl_heap_test.cc  sequence_assembler_test.cc  sparsity_map_test.cc  test_common.h  (+6 more)
realm/tutorials/: CMakeLists.txt
realm/tutorials/barrier/: CMakeLists.txt
realm/tutorials/completion_queue/: CMakeLists.txt
realm/tutorials/cuda_interop/: CMakeLists.txt  cuda_interop.cc  gpu_kernel.cu
realm/tutorials/deferred_allocation/: CMakeLists.txt
realm/tutorials/events/: CMakeLists.txt
realm/tutorials/hello_world/: CMakeLists.txt
realm/tutorials/index_space_copy_fill/: CMakeLists.txt
realm/tutorials/index_space_ops/: CMakeLists.txt
realm/tutorials/machine_model/: CMakeLists.txt  machine_model.cc
realm/tutorials/profiling/: CMakeLists.txt
realm/tutorials/reductions/: CMakeLists.txt
realm/tutorials/region_instances/: CMakeLists.txt
runtime/: CMakeLists.txt  legion.h  runtime.mk
runtime/legion/: .clang-format  bitmask.h  garbage_collection.cc  garbage_collection.h  index_space_value.cc  legion.cc  legion.inl  legion_allocation.h  legion_analysis.cc  legion_analysis.h  legion_auto_trace.cc  legion_auto_trace.h  legion_c.h  legion_c_util.h  legion_config.h  legion_constraint.h  legion_context.cc  legion_context.h  legion_domain.h  legion_domain.inl  legion_instances.cc  legion_instances.h  legion_mapping.cc  legion_mapping.h  legion_ops.cc  legion_ops.h  legion_ops.inl  legion_profiling.cc  legion_profiling.h  legion_profiling_serializer.cc  legion_redop.h  legion_replication.cc  legion_replication.h  legion_spy.cc  legion_spy.h  legion_tasks.cc  legion_tasks.h  legion_trace.cc  legion_trace.h  legion_types.h  (+10 more)
runtime/mappers/: debug_mapper.cc  default_mapper.cc  default_mapper.h  default_mapper.inl  forwarding_mapper.cc  forwarding_mapper.h  logging_wrapper.cc  mapping_utilities.cc  null_mapper.cc  replay_mapper.cc  shim_mapper.cc  test_mapper.cc  wrapper_mapper.cc
runtime/mathtypes/: complex.h
(+2371 files in other folders)
